--- a/src/popup.html
+++ b/src/popup.html
@@ -69,8 +69,8 @@
 
         <div id="buttons-container" class="button-row">
         <button id="selector">Select</button>
-        <button id="read-data">Change Tasks</button>
-        <button id="paste-data">Fill</button>
+        <!-- <button id="read-data">Change Tasks</button> -->
+        <button id="paste-data">Fill-in</button>
         </div>
         <div id="status-message"></div>
     </div>
