change request done

--- a/src/popup.html
+++ b/src/popup.html
@@ -30,8 +30,8 @@
                 <label for="ticket-type">Ticket type</label>
                 <select id="ticket-type" name="ticket-type">
                     <option value=""></option>
-                    <option value="Change Request">Change request</option>
-                    <option value="Incident">Incident</option>
+                    <option value="change_request">Change request</option>
+                    <option value="incident">Incident</option>
                 </select>
             </div>
 
@@ -39,8 +39,8 @@
                 <label for="country">Country</label>
                 <select id="country" name="country">
                     <option value=""></option>
-                    <option value="usa">USA</option>
-                    <option value="ca">Canada</option>
+                    <option value="US">USA</option>
+                    <option value="CA">Canada</option>
                 </select>
             </div>
 
